# stargaze

./: Cargo.toml  Dockerfile  README.md  compose.yaml
src/: events.rs  lib.rs  main.rs  states.rs  styles.rs  systems.rs
src/asteroids/: components.rs  systems.rs
src/game/: components.rs  mod.rs  states.rs  systems.rs
src/game/asteroids/: components.rs  mod.rs  resources.rs  systems.rs
src/game/hud/: mod.rs
src/game/hud/systems/: interactions.rs  layout.rs  mod.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/score/: mod.rs  resources.rs  systems.rs
src/game/stars/: components.rs  mod.rs  resources.rs  systems.rs
src/game_over/: components.rs  mod.rs
src/game_over/systems/: interactions.rs  layout.rs  mod.rs
src/main_menu/: components.rs  mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs  mod.rs
src/player/: mod.rs  systems.rs
src/score/: mod.rs  resources.rs  systems.rs
src/stars/: mod.rs  resources.rs  systems.rs
