[package]
name = "stargaze"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.0"
rand = "0.8.5"
wasm-bindgen = "0.2.89"

[target.'cfg(debug_assertions)'.dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3