[package]
name = "stargaze"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.89"

# Uncomment this to enable Bevy in release mode
bevy = "0.11.0"

# Uncomment this to enable dynamic linking for Bevy in debug mode
# bevy = { version = "0.11.0", features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3